[gd_scene load_steps=2 format=3 uid="uid://bhgrhdxy65wus"]

[ext_resource type="Script" path="res://audio/audio_manager.gd" id="1_5707d"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_5707d")

[node name="ComboNice" type="AudioStreamPlayer" parent="."]

[node name="ComboGreat" type="AudioStreamPlayer" parent="."]

[node name="ComboAwesome" type="AudioStreamPlayer" parent="."]

[node name="ComboFire" type="AudioStreamPlayer" parent="."]

[node name="ComboGetAway" type="AudioStreamPlayer" parent="."]

[node name="ComboFull" type="AudioStreamPlayer" parent="."]
